--- a/index.html
+++ b/index.html
@@ -22,20 +22,23 @@
           <li>Geography & Travel</li>
           <li>Art & Culture</li>
           <li>Money</li>
-          <a class="close" href=""><i class="fa-solid fa-xmark" style="color: #ffffff;"></i></a>
+          <a class="close" href=""
+            ><i class="fa-solid fa-xmark" style="color: #ffffff"></i
+          ></a>
         </ul>
-        <a class="hamburger" href="#menu"><i class="fa-solid fa-bars" style="color: #ffffff;"></i></a>
+        <a class="hamburger" href="#menu"
+          ><i class="fa-solid fa-bars" style="color: #ffffff"></i
+        ></a>
         <img class="logo" src="images/Logo complet.png" alt="britannica logo" />
         >
-      </a>
       </nav>
     </header>
     <section>
- 
       <nav>
         <ul class="breadcrumb">
           <li><a href="#">Home</a></li>
-          <li>><li>
+          <li>></li>
+          <li></li>
           <li><a href="#">Science</a></li>
           <li>></li>
           <li>Mathematics</li>
@@ -43,6 +46,25 @@
       </nav>
     </section>
     <main>
+      <section class="card">
+        <img
+          src="images/800px-Tim_Berners-Lee_secondary.jpg"
+          alt="Sir Tim Berners-Lee"
+        />
+        <hgroup class="container">
+          <h4>Tim Berners-Lee</h4>
+          <a href="">See all media</a>
+        </hgroup>
+        <hr />
+        <section>
+          <p><b>Category:</b><b class="Science">Science & Tech</b></p>
+          <p><b>In Full:</b> Sir Tim Berners-Lee</p>
+          <p>
+            <b>Born:</b>June 8, <a href="#">London</a>,<a href="#">England</a>
+            (age 68)
+          </p>
+        </section>
+      </section>
       <article>
         <p>
           Tim Berners-Lee, in full Sir Tim Berners-Lee, (born June 8, 1955,
