--- a/index.html
+++ b/index.html
@@ -45,47 +45,51 @@
         </ul>
       </nav>
     </section>
-    <main>
-      <section class="card">
+    <main class="container_main">
+      <section class="container_card">
         <img
           src="images/800px-Tim_Berners-Lee_secondary.jpg"
           alt="Sir Tim Berners-Lee"
         />
-        <hgroup class="container">
+        <hgroup>
           <h4>Tim Berners-Lee</h4>
           <a href="">See all media</a>
         </hgroup>
         <hr />
         <section>
-          <p><b>Category:</b><b class="Science">Science & Tech</b></p>
+          <p><b>Category:</b><b class="Science"> Science & Tech</b></p>
           <p><b>In Full:</b> Sir Tim Berners-Lee</p>
           <p>
-            <b>Born:</b>June 8, <a href="#">London</a>,<a href="#">England</a>
+            <b>Born:</b> June 8, <a href="#"> London</a>,<a href="#">
+              England</a
+            >
             (age 68)
           </p>
         </section>
       </section>
-      <article>
-        <p>
-          Tim Berners-Lee, in full Sir Tim Berners-Lee, (born June 8, 1955,
-          London, England), British computer scientist, generally credited as
-          the inventor of the World Wide Web. In 2004 he was awarded a
-          knighthood by Queen Elizabeth II of the United Kingdom and the
-          inaugural Millennium Technology Prize (€1 million) by the Finnish
-          Technology Award Foundation.
-        </p>
-        <p>
-          Computing came naturally to Berners-Lee, as both of his parents worked
-          on the Ferranti Mark I, the first commercial computer. (See computer:
-          The first stored-program machines.) After graduating in 1976 from the
-          University of Oxford, Berners-Lee designed computer software for two
-          years at Plessey Telecommunications Ltd., located in Poole, Dorset,
-          England. Following this, he had several positions in the computer
-          industry, including a stint from June to December 1980 as a software
-          engineering consultant at CERN, the European particle physics
-          laboratory in Geneva.
-        </p>
-      </article>
+      <section class="container_article">
+        <article>
+          <p>
+            Tim Berners-Lee, in full Sir Tim Berners-Lee, (born June 8, 1955,
+            London, England), British computer scientist, generally credited as
+            the inventor of the World Wide Web. In 2004 he was awarded a
+            knighthood by Queen Elizabeth II of the United Kingdom and the
+            inaugural Millennium Technology Prize (€1 million) by the Finnish
+            Technology Award Foundation.
+          </p>
+          <p>
+            Computing came naturally to Berners-Lee, as both of his parents
+            worked on the Ferranti Mark I, the first commercial computer. (See
+            computer: The first stored-program machines.) After graduating in
+            1976 from the University of Oxford, Berners-Lee designed computer
+            software for two years at Plessey Telecommunications Ltd., located
+            in Poole, Dorset, England. Following this, he had several positions
+            in the computer industry, including a stint from June to December
+            1980 as a software engineering consultant at CERN, the European
+            particle physics laboratory in Geneva.
+          </p>
+        </article>
+      </section>
     </main>
     <footer></footer>
   </body>
