--- a/index.html
+++ b/index.html
@@ -13,42 +13,49 @@
   </head>
   <body>
     <header>
-      <nav>
-        <ul class="menu">
-          <li>Home</li>
-          <li>History & Society</li>
-          <li>Biographies</li>
-          <li>Animals & Nature</li>
-          <li>Geography & Travel</li>
-          <li>Art & Culture</li>
-          <li>Money</li>
-          <a class="close" href=""
-            ><i class="fa-solid fa-xmark" style="color: #ffffff"></i
-          ></a>
-        </ul>
-        <a class="hamburger" href="#menu"
-          ><i class="fa-solid fa-bars" style="color: #ffffff"></i
-        ></a>
-        <img class="logo" src="images/Logo complet.png" alt="britannica logo" />
-        >
-      </nav>
+      <img class="logo" src="images/Logo complet.png" alt="britannica logo" />
+      <section class="nav_bar">
+        <section class="nav_bar_left">
+          <ul>
+            <li>
+              &nbsp <i class="fa-solid fa-bars" style="color: #ffffff"></i
+              ><em>Browse</em>
+            </li>
+            <li>
+              <form action="search">
+                &nbsp
+                <i
+                  class="fa-solid fa-magnifying-glass"
+                  style="color: #ffffff"
+                ></i>
+                Search
+              </form>
+            </li>
+            <li>&nbsp Dictionnary</li>
+            <li>&nbsp Quizzes</li>
+            <li>&nbsp Money</li>
+          </ul>
+        </section>
+        <section class="nav_bar_right">
+          <button class="sub_button">subscribe</button>
+          <p>login</p>
+        </section>
+      </section>
     </header>
     <section>
-      <nav>
-        <ul class="breadcrumb">
-          <li><a href="#">Home</a></li>
-          <li>></li>
-          <li></li>
-          <li><a href="#">Science</a></li>
-          <li>></li>
-          <li>Mathematics</li>
-        </ul>
-      </nav>
+      <ul class="breadcrumb">
+        <li><a href="#">Home</a></li>
+        <li>></li>
+        <li></li>
+        <li><a href="#">Science</a></li>
+        <li>></li>
+        <li>Mathematics</li>
+      </ul>
     </section>
     <main class="container_main">
       <section class="container_card">
         <img
-          src="images/800px-Tim_Berners-Lee_secondary.jpg"
+          src="images/British-scientist-Tim-Berners-Lee.webp"
           alt="Sir Tim Berners-Lee"
         />
         <hgroup>
